apps/workloads/home/mealie/deployment.yaml
# 3-mealie-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mealie-app
  labels:
    app: mealie
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: mealie
  template:
    metadata:
      labels:
        app: mealie
        networking/expose-web-ui: "true"
    spec:
      containers:
        - name: mealie
          image: ghcr.io/mealie-recipes/mealie
          volumeMounts:
            - name: data
              mountPath: /app/data
          ports:
            - containerPort: 9000
              name: web-ui
          resources:
            limits:
              memory: "512Mi"
              cpu: "500m"
            requests:
              memory: "128Mi"
              cpu: "125m"
          securityContext:
            runAsNonRoot: true
            allowPrivilegeEscalation: false
            seccompProfile:
              type: RuntimeDefault
            capabilities:
              drop:
                - ALL
      securityContext:
        fsGroup: 65534
        fsGroupChangePolicy: OnRootMismatch
        runAsGroup: 100
        runAsNonRoot: true
        runAsUser: 1026
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: mealie-config-pvc
