apps/workloads/home/mealie/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: mealie-service
spec:
  selector:
    app: mealie
  ports:
    - name: web-ui
      port: 9000
