apps/workloads/home/mealie/network-policy.yaml
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: mealie-policy
spec:
  endpointSelector:
    matchLabels:
      app: mealie
  egress:
    # ------------------------------------------------------------------
    # 2. INTERNAL SERVICES
    - toEndpoints:
        - matchLabels:
            k8s:io.kubernetes.pod.namespace: traefik
            app.kubernetes.io/name: traefik
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "80"
              protocol: TCP
            - port: "9443"
              protocol: TCP
            - port: "8443"
              protocol: TCP
    - toCIDR:
        - "10.10.1.16/32"
      toPorts:
        - ports:
            - port: "443"
              protocol: TCP
            - port: "80"
              protocol: TCP


    # ------------------------------------------------------------------
    # 4. EXTERNAL HOSTS
    - toCIDR:
        - "10.10.1.218/32"
      toPorts:
        - ports:
            - port: "15432"
              protocol: TCP

    # ------------------------------------------------------------------
    # 5. PUBLIC INTERNET
    - toEntities:
        - "world"
      toPorts:
        - ports:
            - port: "80"
              protocol: TCP
            - port: "443"
              protocol: TCP
